unpackaged/main/default/objects/QuoteLineItem/fields/Ad_Id__c.field-meta.xml
<CustomField>
    <fullName>Ad_Id__c</fullName>
    <externalId>true</externalId>
    <label>Ad Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>