unpackaged/main/default/objects/QuoteLineItem/fields/Ad_Name__c.field-meta.xml
<CustomField>
    <fullName>Ad_Name__c</fullName>
    <label>Ad Name</label>
    <type>TextArea</type>
</CustomField>