unpackaged/main/default/objects/QuoteLineItem/fields/Ad_Slot_Size__c.field-meta.xml
<CustomField>
    <fullName>Ad_Slot_Size__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Product2.Advertising_Medium__c , Product2.Advertising_Medium__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ad Slot Size</label>
    <type>Text</type>
</CustomField>