unpackaged/main/default/objects/QuoteLineItem/fields/Ad_Type__c.field-meta.xml
<CustomField>
    <fullName>Ad_Type__c</fullName>
    <description>US-0009350 - [Ads 2020] EU Floor Price/Ad Type/Priority Requirements</description>
    <formula>CASE(
  Billing_Category__c,
 
  &quot;Fix Price&quot;,&quot;SPONSORSHIP&quot;,

  &quot;CPO&quot;,&quot;PRICE_PRIORITY&quot;,

  &quot;CPC&quot;,&quot;PRICE_PRIORITY&quot;,

  &quot;CPM&quot;,

       CASE(
          Rebate_In_Kind_Reason__c,
          &quot;on top service&quot;,&quot;PRICE_PRIORITY&quot;,
          &quot;Compensation&quot;,&quot;STANDARD&quot;,
          IF(Below_Floor__c,&quot;BULK&quot;,&quot;STANDARD&quot;)),

  &quot;STANDARD&quot;
)</formula>
    <label>Ad Type</label>
    <type>Text</type>
</CustomField>