unpackaged/main/default/objects/QuoteLineItem/fields/Additional_Billing_information2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Billing_information2__c</fullName>
    <description>US-0009134 - [Ads 2020] Updates to the Product Configurator - General</description>
    <label>Additional Billing information2</label>
    <length>70</length>
    <type>Text</type>
</CustomField>