unpackaged/main/default/objects/QuoteLineItem/fields/AdKeywords__c.field-meta.xml
<CustomField>
    <fullName>AdKeywords__c</fullName>
    <inlineHelpText>Please enter any additional keywords or key-values outside of the targeting here.</inlineHelpText>
    <label>AdServer Keywords/Key-Values</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>