unpackaged/main/default/objects/QuoteLineItem/fields/AdProduct__c.field-meta.xml
<CustomField>
    <fullName>AdProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008016</description>
    <label>Ad Product</label>
    <referenceTo>Ad_Product__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>