unpackaged/main/default/objects/QuoteLineItem/fields/Adproduct_Ad_Id__c.field-meta.xml
<CustomField>
    <fullName>Adproduct_Ad_Id__c</fullName>
    <formula>AdProduct__r.Ad_Id__c</formula>
    <label>Ad product Ad Id</label>
    <type>Text</type>
</CustomField>