unpackaged/main/default/objects/QuoteLineItem/fields/AdproductOpportunityId__c.field-meta.xml
<CustomField>
    <fullName>AdproductOpportunityId__c</fullName>
    <formula>AdProduct__r.Opportunity__c</formula>
    <label>AdproductOpportunityId</label>
    <type>Text</type>
</CustomField>