unpackaged/main/default/objects/QuoteLineItem/fields/Adserver_ID_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Adserver_ID_Order_ID__c</fullName>
    <externalId>true</externalId>
    <label>Adserver-ID (Order ID)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>