unpackaged/main/default/objects/QuoteLineItem/fields/AdvertisingMedium__c.field-meta.xml
<CustomField>
    <fullName>AdvertisingMedium__c</fullName>
    <description>The name of the Advertising Medium linked to the product of this Opportunity product.</description>
    <formula>PricebookEntry.Product2.Advertising_Medium__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the Advertising Medium linked to the product of this Opportunity product.</inlineHelpText>
    <label>Advertising Medium</label>
    <type>Text</type>
</CustomField>