unpackaged/main/default/objects/QuoteLineItem/fields/AE__c.field-meta.xml
<CustomField>
    <fullName>AE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0007824 - EU Advertising CPM Calculator</description>
    <label>AE</label>
    <type>Checkbox</type>
</CustomField>