unpackaged/main/default/objects/QuoteLineItem/fields/Amount_Net2eBay__c.field-meta.xml
<CustomField>
    <fullName>Amount_Net2eBay__c</fullName>
    <description>US-0010166 - Relaunching Ads revenue fields</description>
    <formula>IF( QLI_Record_Type__c = &#39;PG_PMP_Quote&#39; &amp;&amp; Package_Line_Item__c = null &amp;&amp; Pricebook_Name__c = &#39;Advertising NA&#39;, Budget__c * 0.95,
IF( AE__c = TRUE &amp;&amp; BEGINS(Pricebook_Name__c, &#39;AU&#39;), Amount_Net__c * 0.9,
IF( AE__c = TRUE &amp;&amp; NOT(BEGINS(Pricebook_Name__c,&#39;AU&#39;)), Amount_Net__c * 0.85, Amount_Net__c * 1)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Discounted amount less agency commission if present</inlineHelpText>
    <label>Amount Net2eBay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>