unpackaged/main/default/objects/QuoteLineItem/fields/Amount_Net_Net_Net__c.field-meta.xml
<CustomField>
    <fullName>Amount_Net_Net_Net__c</fullName>
    <description>US-0007824 - EU Advertising CPM Calculator</description>
    <label>Amount Net/Net/Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>