unpackaged/main/default/objects/QuoteLineItem/fields/Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>Approval_Needed__c</fullName>
    <formula>/*
IF(ListPrice__c -  MaxDiscountAmount__c  &gt; SalesPriceNet__c || Force_Opportunity_Approval__c ,true,false) */

 if(UnitPrice &gt;  SalesPriceNet__c ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Needed</label>
    <type>Checkbox</type>
</CustomField>