unpackaged/main/default/objects/QuoteLineItem/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <label>Available</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>