unpackaged/main/default/objects/QuoteLineItem/fields/Below_Floor__c.field-meta.xml
<CustomField>
    <fullName>Below_Floor__c</fullName>
    <description>US-0009350 - [Ads 2020] EU Floor Price/Ad Type/Priority Requirements</description>
    <formula>IF( 
   ISPICKVAL(Billing_Category__c,&quot;CPM&quot;) &amp;&amp; Floor_Price__c &gt; CPM_net__c , 
   true,
   IF( 
      AND(ISPICKVAL(Billing_Category__c,&quot;CPO&quot;), Pricebook_Name__c &lt;&gt; &quot;Prebid automation&quot;) , 
      true,
      IF( ISPICKVAL(Billing_Category__c,&quot;CPC&quot;) , true,false)
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Below Floor</label>
    <type>Checkbox</type>
</CustomField>