unpackaged/main/default/objects/QuoteLineItem/fields/Boomerang__c.field-meta.xml
<CustomField>
    <fullName>Boomerang__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0007824 - EU Advertising CPM Calculator</description>
    <label>Boomerang</label>
    <type>Checkbox</type>
</CustomField>