unpackaged/main/default/objects/QuoteLineItem/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>INTEG - N || ** eBay Advertising **  || WF - N || AP - N || VAL - N ||Class - N || Definition: Budget  ||</description>
    <label>Estimated Budget</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>