unpackaged/main/default/objects/QuoteLineItem/fields/Check_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Check_Inventory__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Check Inventory</label>
    <type>Checkbox</type>
</CustomField>