unpackaged/main/default/objects/QuoteLineItem/fields/ClonedFrom__c.field-meta.xml
<CustomField>
    <fullName>ClonedFrom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>