unpackaged/main/default/objects/QuoteLineItem/fields/CountriesDescription__c.field-meta.xml
<CustomField>
    <fullName>CountriesDescription__c</fullName>
    <description>US-0009349</description>
    <label>CountriesDescription</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>