unpackaged/main/default/objects/QuoteLineItem/fields/CPM_net__c.field-meta.xml
<CustomField>
    <fullName>CPM_net__c</fullName>
    <description>US-0007824 - EU Advertising CPM Calculator
US-0009260 - [Ads 2020] OLI Trigger to QLI/AP, Fields &amp; Syncing - will be the same for TKP_net_net_net__c</description>
    <formula>IF( 
    ISPICKVAL(Billing_Category__c, &quot;Fix Price&quot;) || 
    ISPICKVAL(Billing_Category__c, &quot;CPD&quot;) || 
    ISPICKVAL(Billing_Category__c, &quot;ServiceFee&quot;) || 
    ISPICKVAL(Billing_Category__c, &quot;Subscription&quot;) || 
    ISPICKVAL(Billing_Category__c, &quot;CPC&quot;) || 
    ISPICKVAL(Billing_Category__c, &quot;CPO&quot;) || 
    ISPICKVAL(Billing_Category__c, &quot;CPA&quot;) 
    , ROUND( Amount_Net2eBay__c / Quantity ,2)
    , ROUND( Amount_Net2eBay__c / (Quantity/1000) ,2)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPM Net2Ebay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>