unpackaged/main/default/objects/QuoteLineItem/fields/CPM_net_net_net__c.field-meta.xml
<CustomField>
    <fullName>CPM_net_net_net__c</fullName>
    <description>US-0007824 - EU Advertising CPM Calculator</description>
    <formula>IF ( ISPICKVAL(Billing_Category__c, &quot;Fix Price&quot;) || ISPICKVAL(Billing_Category__c, &quot;CPC&quot;) || ISPICKVAL(Billing_Category__c, &quot;CPO&quot;) || ISPICKVAL(Billing_Category__c, &quot;CPA&quot;) || ISPICKVAL(Billing_Category__c, &quot;Rev Share&quot;),ROUND(Amount_Net_Net_Net__c / Quantity ,2), ROUND(Amount_Net_Net_Net__c / (Quantity/1000) ,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPM net/net/net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>