unpackaged/main/default/objects/QuoteLineItem/fields/Customer_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order_No__c</fullName>
    <description>US-0009134 - [Ads 2020] Updates to the Product Configurator - General</description>
    <label>Customer Order No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>