unpackaged/main/default/objects/QuoteLineItem/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Copy of standard field for compatibility with Description__c field on Revenue Item. Used in default line description. Do not delete.</description>
    <formula>Description</formula>
    <label>Description</label>
    <type>Text</type>
</CustomField>