unpackaged/main/default/objects/QuoteLineItem/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <formula>TEXT(Product2.Device_Type__c)</formula>
    <label>Device</label>
    <type>Text</type>
</CustomField>