unpackaged/main/default/objects/QuoteLineItem/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <formula>((UnitPrice -  SalesPriceNet__c) / UnitPrice) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>