unpackaged/main/default/objects/QuoteLineItem/fields/Discrepancy_Special_Agency__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Special_Agency__c</fullName>
    <description>US-0007824 - EU Advertising CPM Calculator</description>
    <formula>ABS( Special_Agency_Discount_Percent__c -  Special_Agency_Discount_shadow__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discrepancy Special Agency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>