unpackaged/main/default/objects/QuoteLineItem/fields/FC_Ad_served_every__c.field-meta.xml
<CustomField>
    <fullName>FC_Ad_served_every__c</fullName>
    <inlineHelpText>Dart: FC Ad served every</inlineHelpText>
    <label>FC Ad served every</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>