unpackaged/main/default/objects/QuoteLineItem/fields/FC_Period__c.field-meta.xml
<CustomField>
    <fullName>FC_Period__c</fullName>
    <inlineHelpText>Dart: FC Period</inlineHelpText>
    <label>FC Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Lifetime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>