unpackaged/main/default/objects/QuoteLineItem/fields/FC_Quantity__c.field-meta.xml
<CustomField>
    <fullName>FC_Quantity__c</fullName>
    <label>FC Quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>