unpackaged/main/default/objects/QuoteLineItem/fields/Floor_Price__c.field-meta.xml
<CustomField>
    <fullName>Floor_Price__c</fullName>
    <description>US-0009350 - [Ads 2020] EU Floor Price/Ad Type/Priority Requirements</description>
    <formula>IF( 
   PricebookEntry.Floor_Price__c &gt; 0,
   PricebookEntry.Floor_Price__c,
   Sales_Price_incl_Targeting__c  * 0.1 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>