unpackaged/main/default/objects/QuoteLineItem/fields/Force_Opportunity_Approval__c.field-meta.xml
<CustomField>
    <fullName>Force_Opportunity_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force Opportunity Approval</label>
    <type>Checkbox</type>
</CustomField>