unpackaged/main/default/objects/QuoteLineItem/fields/from_Date__c.field-meta.xml
<CustomField>
    <fullName>from_Date__c</fullName>
    <label>From (Date)</label>
    <type>Date</type>
</CustomField>