unpackaged/main/default/objects/QuoteLineItem/fields/Gross_CPM__c.field-meta.xml
<CustomField>
    <fullName>Gross_CPM__c</fullName>
    <description>US-0007824 - EU Advertising CPM Calculator</description>
    <formula>IF(
ISPICKVAL(Billing_Category__c, &quot;CPM&quot;),
PricebookEntry.UnitPrice * 1000,
PricebookEntry.UnitPrice)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross CPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>