unpackaged/main/default/objects/QuoteLineItem/fields/Guaranteed_AI__c.field-meta.xml
<CustomField>
    <fullName>Guaranteed_AI__c</fullName>
    <description>US-9135</description>
    <label>Guaranteed AI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>