unpackaged/main/default/objects/QuoteLineItem/fields/Head_Approval_necessary__c.field-meta.xml
<CustomField>
    <fullName>Head_Approval_necessary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0009349</description>
    <label>Head Approval necessary</label>
    <type>Checkbox</type>
</CustomField>