unpackaged/main/default/objects/QuoteLineItem/fields/Impression_Amount__c.field-meta.xml
<CustomField>
    <fullName>Impression_Amount__c</fullName>
    <description>INTEG - N || ** eBay Advertising **  || WF - N || AP - N || VAL - N ||Class - N || Definition: Impression Amount  ||</description>
    <label>Impression Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>