unpackaged/main/default/objects/QuoteLineItem/fields/Is_Revised_Quote__c.field-meta.xml
<CustomField>
    <fullName>Is_Revised_Quote__c</fullName>
    <formula>Quote.Is_Revised_Quote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Revised Quote</label>
    <type>Checkbox</type>
</CustomField>