unpackaged/main/default/objects/QuoteLineItem/fields/IsWallpaper__c.field-meta.xml
<CustomField>
    <fullName>IsWallpaper__c</fullName>
    <description>US-0007824 - EU Advertising CPM Calculator</description>
    <formula>IF( CONTAINS( PricebookEntry.Product2.Name , &quot;Wallpaper&quot; ) || CONTAINS( PricebookEntry.Product2.Name , &quot;Homepage Event&quot; ) || CONTAINS( PricebookEntry.Product2.Name , &quot;Takeover&quot; ) , &quot;Wallpaper&quot;, &quot;Standard&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsWallpaper</label>
    <type>Text</type>
</CustomField>