unpackaged/main/default/objects/QuoteLineItem/fields/Keywords_KeyValue_combination__c.field-meta.xml
<CustomField>
    <fullName>Keywords_KeyValue_combination__c</fullName>
    <label>Keywords/KeyValue combination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
                <default>true</default>
                <label>AND</label>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>