unpackaged/main/default/objects/QuoteLineItem/fields/Last_Availability_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Last_Availability_Forecast__c</fullName>
    <label>Last Availability Forecast</label>
    <type>DateTime</type>
</CustomField>