unpackaged/main/default/objects/QuoteLineItem/fields/Legacy_SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SFDC_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy SFDC ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>