unpackaged/main/default/objects/QuoteLineItem/fields/ListPrice__c.field-meta.xml
<CustomField>
    <fullName>ListPrice__c</fullName>
    <description>Listprice based on billing category, retrieved from Product CPC, CPM, CPD and ServiceFee price settings</description>
    <label>ListPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>