unpackaged/main/default/objects/QuoteLineItem/fields/Number_of_Targeting_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Targeting_Criteria__c</fullName>
    <description>US-0007824 - EU Advertising CPM Calculator</description>
    <label>Number of Targeting Criteria</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>