unpackaged/main/default/objects/QuoteLineItem/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <description>US-9135</description>
    <label>Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multiformat 1</fullName>
            </value>
            <value>
                <fullName>Multiformat 2</fullName>
            </value>
            <value>
                <fullName>Multiformat 3</fullName>
            </value>
            <value>
                <fullName>Multiformat 4</fullName>
            </value>
            <value>
                <fullName>Multiformat 5</fullName>
            </value>
            <value>
                <fullName>Multiformat 6</fullName>
            </value>
            <value>
                <fullName>Multiformat 7</fullName>
            </value>
            <value>
                <fullName>Multiformat 8</fullName>
            </value>
            <value>
                <fullName>HP_Event</fullName>
            </value>
            <value>
                <fullName>Site_Event</fullName>
            </value>
            <value>
                <fullName>Multi Category 1</fullName>
            </value>
            <value>
                <fullName>Multi Category 2</fullName>
            </value>
            <value>
                <fullName>Multi Category 3</fullName>
            </value>
            <value>
                <fullName>Multi Category 4</fullName>
            </value>
            <value>
                <fullName>Multi Category 9</fullName>
            </value>
            <value>
                <fullName>Multi Category 10</fullName>
            </value>
            <value>
                <fullName>Multi Category 11</fullName>
            </value>
            <value>
                <fullName>Multi Category 12</fullName>
            </value>
            <value>
                <fullName>Multi Category 13</fullName>
            </value>
            <value>
                <fullName>Multi Category 14</fullName>
            </value>
            <value>
                <fullName>Multi Category 15</fullName>
            </value>
            <value>
                <fullName>Multi Category 16</fullName>
            </value>
            <value>
                <fullName>Multi Category 17</fullName>
            </value>
            <value>
                <fullName>Multi Category 18</fullName>
            </value>
            <value>
                <fullName>Multi Category 19</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>