unpackaged/main/default/objects/QuoteLineItem/fields/Package_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Package_Line_Item__c</fullName>
    <description>US-0007824 - EU Advertising CPM Calculator</description>
    <label>Package Line Item</label>
    <length>100</length>
    <type>Text</type>
</CustomField>