unpackaged/main/default/objects/QuoteLineItem/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <description>US-0007824 - EU Advertising CPM Calculator</description>
    <formula>IF(CONTAINS($Profile.Name , &quot;Ads User&quot;) , 
text(month(from_Date__c)) &amp; &quot;/&quot; &amp; text(day(from_Date__c)) &amp;&quot;/&quot; &amp; text(year(from_Date__c)) &amp; &quot; - &quot; &amp; text(month(until_Date__c)) &amp; &quot;/&quot; &amp;  text(day(until_Date__c)) &amp; &quot;/&quot; &amp; text(year(until_Date__c)),
text(day(from_Date__c)) &amp; &quot;/&quot; &amp; text(month(from_Date__c)) &amp; &quot;/&quot; &amp; text(year(from_Date__c)) &amp; &quot; - &quot; &amp;  text(day(until_Date__c)) &amp; &quot;/&quot; &amp; text(month(until_Date__c)) &amp; &quot;/&quot; &amp; text(year(until_Date__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period</label>
    <type>Text</type>
</CustomField>