unpackaged/main/default/objects/QuoteLineItem/fields/Placement_Type__c.field-meta.xml
<CustomField>
    <fullName>Placement_Type__c</fullName>
    <formula>TEXT(Product2.Placement_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placement</label>
    <type>Text</type>
</CustomField>