unpackaged/main/default/objects/QuoteLineItem/fields/Predefined_Adunit__c.field-meta.xml
<CustomField>
    <fullName>Predefined_Adunit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Predefined Adunit</label>
    <referenceTo>Content__c</referenceTo>
    <relationshipLabel>QLI_Content</relationshipLabel>
    <relationshipName>QLI_Content</relationshipName>
    <type>Lookup</type>
</CustomField>