unpackaged/main/default/objects/QuoteLineItem/fields/Predefined_DeviceCategory__c.field-meta.xml
<CustomField>
    <fullName>Predefined_DeviceCategory__c</fullName>
    <label>Predefined DeviceCategory</label>
    <type>TextArea</type>
</CustomField>