unpackaged/main/default/objects/QuoteLineItem/fields/Predefined_Placement__c.field-meta.xml
<CustomField>
    <fullName>Predefined_Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Predefined Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>QLI_Placement</relationshipLabel>
    <relationshipName>QLI_Placement</relationshipName>
    <type>Lookup</type>
</CustomField>