unpackaged/main/default/objects/QuoteLineItem/fields/Pricebook_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Name__c</fullName>
    <description>US-9135</description>
    <label>Pricebook Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>