unpackaged/main/default/objects/QuoteLineItem/fields/PrimaryQuote__c.field-meta.xml
<CustomField>
    <fullName>PrimaryQuote__c</fullName>
    <description>US-0008016, US-0008726</description>
    <formula>Quote.Primary_Quote__c</formula>
    <label>Primary Quote</label>
    <type>Checkbox</type>
</CustomField>