unpackaged/main/default/objects/QuoteLineItem/fields/Product_Package__c.field-meta.xml
<CustomField>
    <fullName>Product_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Packaged Product</label>
    <referenceTo>Product_Package__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>