unpackaged/main/default/objects/QuoteLineItem/fields/QLI_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>QLI_Record_Type__c</fullName>
    <label>QLI Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>