unpackaged/main/default/objects/QuoteLineItem/fields/Quote_AdProduct_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Quote_AdProduct_Unique_Key__c</fullName>
    <description>US-0008866 - [Ads 2020] Prevent deletion of Quote Line Item &amp; Ad Product if booked to DFP</description>
    <label>Quote &amp; Ad Product Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>