unpackaged/main/default/objects/QuoteLineItem/fields/QuoteMediaPlan__c.field-meta.xml
<CustomField>
    <fullName>QuoteMediaPlan__c</fullName>
    <description>US-0008726</description>
    <formula>Quote.Media_Plan__c</formula>
    <label>Quote Media Plan</label>
    <type>Text</type>
</CustomField>