unpackaged/main/default/objects/QuoteLineItem/fields/QuoteMediaPlanRevision__c.field-meta.xml
<CustomField>
    <fullName>QuoteMediaPlanRevision__c</fullName>
    <description>US-0008726</description>
    <formula>Quote.Media_Plan__r.IsRevision__c</formula>
    <label>Quote Media Plan Revision</label>
    <type>Checkbox</type>
</CustomField>