unpackaged/main/default/objects/QuoteLineItem/fields/QuoteOpportunityId__c.field-meta.xml
<CustomField>
    <fullName>QuoteOpportunityId__c</fullName>
    <description>US-0008866 - [Ads 2020] Prevent deletion of Quote Line Item &amp; Ad Product if booked to DFP</description>
    <formula>Quote.OpportunityId</formula>
    <label>QuoteOpportunityId</label>
    <type>Text</type>
</CustomField>