unpackaged/main/default/objects/QuoteLineItem/fields/QuoteRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>QuoteRecordTypeName__c</fullName>
    <description>US-0008726</description>
    <formula>Quote.RecordType.DeveloperName</formula>
    <label>Quote Record Type Name</label>
    <type>Text</type>
</CustomField>