unpackaged/main/default/objects/QuoteLineItem/fields/QuoteStatus__c.field-meta.xml
<CustomField>
    <fullName>QuoteStatus__c</fullName>
    <description>US-0008726</description>
    <formula>Text(Quote.Status)</formula>
    <label>Quote Status</label>
    <type>Text</type>
</CustomField>