unpackaged/main/default/objects/QuoteLineItem/fields/Rate_Card_Discount__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0007824 - EU Advertising CPM Calculator</description>
    <label>Rate Card Discount</label>
    <type>Checkbox</type>
</CustomField>